Update Docker-Compose file to use a CLI var for the host portion of the container bind mount. Update readme to reflect this change

--- a/Windows/docker-compose.yml
+++ b/Windows/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: belchy06/sequence_profiler:windows
         volumes:
             -   type: bind
-                source: c:/Users/Will/Desktop/sequenceprofiler/output
+                source: $SOURCE
                 target: c:/output
         isolation: process
         devices: 
